# liangbiaoserve

loginpage/: package.json  pnpm-lock.yaml
serve/: .gitignore  Cargo.toml
serve/src/: main.rs  sqlconnect.rs  utils.rs
serve/src/sqlconnect/: illegaled.rs
uploadpage/: deno.json  settings.lua
uploadpage/components/: shown.tsx  upload.tsx
uploadpage/interfaces/: logins.d.ts
uploadpage/lib/: tologin.ts
uploadpage/pages/: index.tsx
uploadpage/style/: index.css
uploadpage/style/loginpage/: login.css
uploadpage/style/uploadpage/: floatbutton.css  navbar.css  prevblock.css  selectitem.css
uploadpage/urls/: remoteurl.ts
