[package]
name = "example-multipart-form"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version="0.4.5", features = ["multipart","headers"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower-http = { version = "0.2.0", features = ["fs","trace"] }
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "any", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
