[package]
name = "myserve"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version="0.5.1", features = ["multipart","headers"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower-http = { version = "0.2.5", features = ["fs","trace","cors",] }
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "any", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
base64 = "0.13.0"
hyper = "0.14.17"
anyhow = "1.0.56"
once_cell = "1.10.0"
